# nh-resource-server

./: .env.example  .gitignore  README.md  main.py  ne.txt  ns.txt  pyproject.toml  rainfall.txt  scenario.meta.yaml  tide.txt
crms/: feature.py  hello.py  simulation.py  solution.py  tcp_treeger.py  topo.py  treeger.py
icrms/: ifeature.py  ihello.py  isimulation.py  isolution.py  itopo.py  itreeger.py
scripts/: chat.py  feature.crm.py  grid_mcp_server.py  hello.crm.py  simulation.crm.py  solution.crm.py  topo.crm.py  treeger.crm.py
src/nh_resource_server/: main.py
src/nh_resource_server/api/: __init__.py
src/nh_resource_server/api/endpoints/: __init__.py  feature.py  hello.py  proxy.py  scene.py  simulation.py  solution.py  topo.py  ui.py
src/nh_resource_server/api/endpoints/bot/: __init__.py  chat.py
src/nh_resource_server/api/endpoints/patch/: __init__.py  patch.py  patches.py
src/nh_resource_server/api/endpoints/project/: __init__.py  project.py  projects.py
src/nh_resource_server/api/endpoints/schema/: __init__.py  schema.py  schemas.py
src/nh_resource_server/compos/: grid_comp.py  grid_comp_old.py
src/nh_resource_server/core/: bootstrapping_treeger.py  config.py  mcp_client.py  server.py
src/nh_resource_server/schemas/: __init_.py  base.py  clever.py  feature.py  grid.py  project.py  proxy.py  schema.py  solution.py
test/: http_client_hello.py  http_client_simulation.py  http_client_solution.py
test/data/: 0605.hsf  0610.inp  D122_df7_hot_36.csv  R22.txt_df7.csv  gate.txt  ns2.txt
